--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -15,45 +15,39 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Build the Astro site and upload the generated `dist` folder as an artifact
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build site
+      - name: Build
         run: npm run build
 
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the built `dist` directory from Astro
           path: dist
 
-  # Deploy the previously uploaded artifact to GitHub Pages
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      # Configure the GitHub Pages deployment target
-      - name: Setup GitHub Pages
-        id: setup
-        uses: actions/configure-pages@v2
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
 
-      # Deploy the artifact to GitHub Pages
       - name: Deploy to GitHub Pages
-        id: deploy
-        uses: actions/deploy-pages@v2
+        id: deployment
+        uses: actions/deploy-pages@v4
