--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "astro": "^5.0.0",
-    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
+    "@astrojs/tailwind": "^6.0.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "astro": "^5.0.0",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.1",
